# Array

./: CMakeLists.txt  README
include/: Array.h
src/: Array.c  Array_private.c  Array_private.h
test/: CMakeLists.txt  test.c
test/cstring/src/: cstring.c
